--- a/vignettes/predict.Rmd
+++ b/vignettes/predict.Rmd
@@ -88,17 +88,17 @@ obj = ctsmTMB$new()
 obj$set_modelname("ornstein_uhlenbeck")
 
 # Add system equations
-obj$add_systems(
+obj$addSystem(
   dx ~ theta * (mu-x) * dt + sigma_x*dw
 )
 
 # Add observation equations
-obj$add_observations(
+obj$addObs(
   y ~ x
 )
 
 # Set observation equation variances
-obj$add_observation_variances(
+obj$setVariance(
   y ~ sigma_y^2
 )
 
@@ -110,7 +110,7 @@ obj$add_algebraics(
 )
 
 # Specify parameter initial values and lower/upper bounds in estimation
-obj$add_parameters(
+obj$setParameter(
   logtheta   = log(c(initial = 5,    lower = 0,    upper = 20)),
   mu         = c(    initial = 0,    lower = -10,  upper = 10),
   logsigma_x = log(c(initial = 1e-1, lower = 1e-5, upper = 5)),
@@ -174,7 +174,7 @@ head(pred2$states)
 
 ---
 
-The default of `predict` is to use the initial parameters supplied during `add_parameters`, unless the `estimate` function has been succesfully run, then `predict` will use the parameter values at the found minimizer. You can provide other parameters using the `pars` argument of the method i.e.
+The default of `predict` is to use the initial parameters supplied during `setParameter`, unless the `estimate` function has been succesfully run, then `predict` will use the parameter values at the found minimizer. You can provide other parameters using the `pars` argument of the method i.e.
 ```{r, eval=FALSE}
 some.other.random.pars = rnorm(length(fit$par.fixed))
 pred = obj$predict(.data, pars=some.other.random.pars)
