--- a/vignettes/construct_nll.Rmd
+++ b/vignettes/construct_nll.Rmd
@@ -66,7 +66,7 @@ We now construct the `ctsmTMB` model object
 obj = ctsmTMB$new()
 
 # Set name of model (and the created .cpp file)
-obj$set_modelname("ornstein_uhlenbeck")
+obj$setModelname("ornstein_uhlenbeck")
 
 # Add system equations
 obj$addSystem(
@@ -84,7 +84,7 @@ obj$setVariance(
 )
 
 # Specify algebraic relations
-obj$add_algebraics(
+obj$setAlgebraics(
   theta ~ exp(logtheta),
   sigma_x ~ exp(logsigma_x),
   sigma_y ~ exp(logsigma_y)
@@ -99,7 +99,7 @@ obj$setParameter(
 )
 
 # Set initial state mean and covariance
-obj$set_initial_state(list(x[1], 1e-1*diag(1)))
+obj$setInitialState(list(x[1], 1e-1*diag(1)))
 ```
 
 # Estimation
@@ -156,10 +156,10 @@ We can now use these to optimize the function using e.g. `stats::optim` instead.
 ---
 
 
-You can extract the parameter bounds specified when calling `setParameter()` method by using the `get_parameters` method (note that `nll$par` and `pars$initial` are identical).
+You can extract the parameter bounds specified when calling `setParameter()` method by using the `getParameters` method (note that `nll$par` and `pars$initial` are identical).
 
 ```{r}
-pars = obj$get_parameters()
+pars = obj$getParameters()
 print(pars)
 ```
 
