--- a/vignettes/estimate.Rmd
+++ b/vignettes/estimate.Rmd
@@ -57,7 +57,7 @@ We now construct the `ctsmTMB` model object as per usual
 obj = ctsmTMB$new()
 
 # Set name of model (and the created .cpp file)
-obj$set_modelname("ornstein_uhlenbeck")
+obj$setModelname("ornstein_uhlenbeck")
 
 # Add system equations
 obj$addSystem(
@@ -75,7 +75,7 @@ obj$setVariance(
 )
 
 # Specify algebraic relations
-obj$add_algebraics(
+obj$setAlgebraics(
   theta ~ exp(logtheta),
   sigma_x ~ exp(logsigma_x),
   sigma_y ~ exp(logsigma_y)
@@ -90,7 +90,7 @@ obj$setParameter(
 )
 
 # Set initial state mean and covariance
-obj$set_initial_state(list(x[1], 1e-1*diag(1)))
+obj$setInitialState(list(x[1], 1e-1*diag(1)))
 ```
 
 # Using `estimate` - default settings
