--- a/vignettes/observation_equations.Rmd
+++ b/vignettes/observation_equations.Rmd
@@ -16,7 +16,7 @@ In this document we show how to apply functions to the left-hand side of an obse
 obj = ctsmTMB$new()
 
 # Set name of model (and the created .cpp file)
-obj$set_modelname("ornstein_uhlenbeck")
+obj$setModelname("ornstein_uhlenbeck")
 
 # Add system equations
 obj$addSystem(
