--- a/vignettes/predict.Rmd
+++ b/vignettes/predict.Rmd
@@ -85,7 +85,7 @@ We now construct the `ctsmTMB` model object
 obj = ctsmTMB$new()
 
 # Set name of model (and the created .cpp file)
-obj$set_modelname("ornstein_uhlenbeck")
+obj$setModelname("ornstein_uhlenbeck")
 
 # Add system equations
 obj$addSystem(
@@ -103,7 +103,7 @@ obj$setVariance(
 )
 
 # Specify algebraic relations
-obj$add_algebraics(
+obj$setAlgebraics(
   theta ~ exp(logtheta),
   sigma_x ~ exp(logsigma_x),
   sigma_y ~ exp(logsigma_y)
@@ -118,7 +118,7 @@ obj$setParameter(
 )
 
 # Set initial state mean and covariance
-obj$set_initial_state(list(x[1], 1e-1*diag(1)))
+obj$setInitialState(list(x[1], 1e-1*diag(1)))
 ```
 
 # Predict
