--- a/README.Rmd
+++ b/README.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(
 
 
 <!-- Logo -->
-# ctsmTMB <img src='logo/logo.png' align="right" height="200" />
+# ctsmTMB <img src='logo/logo.png' align="right" height="160" />
 
 <!-- Badges -->
 [![CRAN status](https://www.r-pkg.org/badges/version/geomtextpath)](https://CRAN.R-project.org/package=geomtextpath)
@@ -22,8 +22,7 @@ knitr::opts_chunk$set(
 
 <!-- Package Description -->
 
-<p style="font-size:30px"><strong>Overview</strong></p> 
-<!-- ## Overview -->
+## Overview
 
 **ctsmTMB** [(Continuous Time Stochastic Modelling using Template Model Builder)](https://phillipbvetter.github.io/ctsmTMB/index.html) is an R package for parameter estimation, state filtration and forecasting in stochastic state space models, an intended successor of, and heavily inspired by the **CTSM** package [(Continuous Time Stochastic Modelling)](https://ctsm.info). The package is essentially a wrapper around the **TMB**/**RTMB** packages [(Template Model Builder)](https://github.com/kaskr/adcomp) used to automatically constructs the underlying *(negative log)* likelihood function behind the scenes (based on a user-specified model). The model is specified using the implemented OOP-style **R6** `ctsmTMB` class, with its methods for e.g. specifying system equations (`addSystem`) and observation equations (`addObs`).
 
