--- a/vignettes/predict.Rmd
+++ b/vignettes/predict.Rmd
@@ -308,3 +308,7 @@ ggplot() +
     ) +
   mytheme
 ```
+
+```{r remove files after vignette has been compiled, include=FALSE}
+unlink(paste0(getwd(),"/ctsmTMB_cppfiles"), recursive=TRUE)
+```
