--- a/vignettes/negative_log_likelihood.Rmd
+++ b/vignettes/negative_log_likelihood.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "Extracting likelihood function, gradient and using custom optimizers"
+title: "Using another Optimizater - Extracting the Objective Function"
 author: ""
 date: ""
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Extracting likelihood function, gradient and using custom optimizers}
+  %\VignetteIndexEntry{Using another Optimizater - Extracting the Objective Function}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -106,6 +106,10 @@ obj$setParameter(
 obj$setInitialState(list(x[1], 1e-1*diag(1)))
 ```
 
+```{r, include=FALSE}
+obj$setCppfilesDirectory("../vignette_sourcefiles")
+```
+
 # Estimation
 
 ---
@@ -194,9 +198,4 @@ data.frame(external=opt$value, internal=fit$nll)
 
 # Gradient components
 data.frame(external=t(nll$gr(opt$par)), internal=t(nll$gr(fit$par.fixed)))
-```
-
-
-```{r remove files after vignette has been compiled, include=FALSE}
-unlink(paste0(getwd(),"/ctsmTMB_cppfiles"), recursive=TRUE)
 ```
