--- a/vignettes/simulate.Rmd
+++ b/vignettes/simulate.Rmd
@@ -125,6 +125,12 @@ obj$setParameter(
 obj$setInitialState(list(x[1], 1e-1*diag(1)))
 ```
 
+```{r, include=FALSE}
+obj$setCppfilesDirectory("../vignette_sourcefiles")
+```
+
+```
+
 # Predict
 
 ---
@@ -307,8 +313,4 @@ ggplot() +
     y = "Root-Mean-Square Errors"
     ) +
   mytheme
-```
-
-```{r remove files after vignette has been compiled, include=FALSE}
-unlink(paste0(getwd(),"/ctsmTMB_cppfiles"), recursive=TRUE)
 ```
