--- a/vignettes/ctsmTMB.Rmd
+++ b/vignettes/ctsmTMB.Rmd
@@ -41,7 +41,7 @@ obj = ctsmTMB$new()
 
 ```{r, include=FALSE}
 obj$setModelname("GettingStarted_model")
-obj$setCppfilesDirectory("../vignette_sourcefiles")
+obj$setCppfilesDirectory("../vignettes_sourcefiles")
 ```
 
 
