--- a/vignettes/estimate.Rmd
+++ b/vignettes/estimate.Rmd
@@ -98,7 +98,9 @@ obj$setInitialState(list(x[1], 1e-1*diag(1)))
 ```
 
 ```{r, include=FALSE}
-obj$setCppfilesDirectory("../vignettes_sourcefiles")
+tmpdir <- tempdir()
+folder_path = paste0(tmpdir,"/ctsmTMB_cppfiles")
+obj$setCppfilesDirectory(folder_path)
 ```
 
 # Using `estimate` - default settings
@@ -180,3 +182,7 @@ This argument determines the time-step used in the ODE solvers
 # Argument: `control`
 
 ---
+
+```{r clean up, include=FALSE}
+unlink(folder_path, recursive=TRUE)
+```
