--- a/vignettes/simulate.Rmd
+++ b/vignettes/simulate.Rmd
@@ -126,9 +126,9 @@ obj$setInitialState(list(x[1], 1e-1*diag(1)))
 ```
 
 ```{r, include=FALSE}
-obj$setCppfilesDirectory("../vignettes_sourcefiles")
-```
-
+tmpdir <- tempdir()
+folder_path = paste0(tmpdir,"/ctsmTMB_cppfiles")
+obj$setCppfilesDirectory(folder_path)
 ```
 
 # Predict
@@ -313,4 +313,8 @@ ggplot() +
     y = "Root-Mean-Square Errors"
     ) +
   mytheme
+```
+
+```{r clean up, include=FALSE}
+unlink(folder_path, recursive=TRUE)
 ```
