--- a/vignettes/predict.Rmd
+++ b/vignettes/predict.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "predict: Forecasting the model states and observations."
+title: "Performing (moment) model predictions"
 author: ""
 date: ""
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{predict: Forecasting the model states and observations.}
+  %\VignetteIndexEntry{Performing (moment) model predictions}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -126,8 +126,7 @@ obj$setInitialState(list(x[1], 1e-1*diag(1)))
 ```
 
 ```{r, include=FALSE}
-tmpdir <- tempdir()
-folder_path = paste0(tmpdir,"/ctsmTMB_cppfiles")
+folder_path <- ctsmTMB:::create_temp_folder()
 obj$setCppfilesDirectory(folder_path)
 ```
 
