--- a/vignettes/ctsmTMB.Rmd
+++ b/vignettes/ctsmTMB.Rmd
@@ -51,8 +51,8 @@ obj$setCppfilesDirectory("some_path_to_a_directory")
 ```
 
 ```{r, include=FALSE}
-folder_path <- ctsmTMB:::create_temp_folder()
-obj$setCppfilesDirectory(folder_path)
+temporary_directory <- normalizePath(file.path(tempdir(),"ctsmTMB_cppfiles"))
+obj$setCppfilesDirectory(temporary_directory)
 ```
 
 Now that the object is created let us first inspect it's printout:
@@ -311,6 +311,6 @@ obj$setParameter(logtheta = log(c(initial=5, lower=0, upper=20)))
 ```
 
 ```{r clean up, include=FALSE}
-unlink(folder_path, recursive=TRUE)
+unlink(temporary_directory, recursive=TRUE)
 ```
 
