--- a/vignettes/estimate.Rmd
+++ b/vignettes/estimate.Rmd
@@ -98,8 +98,8 @@ obj$setInitialState(list(x[1], 1e-1*diag(1)))
 ```
 
 ```{r, include=FALSE}
-folder_path <- ctsmTMB:::create_temp_folder()
-obj$setCppfilesDirectory(folder_path)
+temporary_directory <- normalizePath(file.path(tempdir(),"ctsmTMB_cppfiles"))
+obj$setCppfilesDirectory(temporary_directory)
 ```
 
 # Using `estimate` - default settings
@@ -183,5 +183,5 @@ This argument determines the time-step used in the ODE solvers
 ---
 
 ```{r clean up, include=FALSE}
-unlink(folder_path, recursive=TRUE)
+unlink(temporary_directory, recursive=TRUE)
 ```
