--- a/vignettes/simulate.Rmd
+++ b/vignettes/simulate.Rmd
@@ -126,8 +126,8 @@ obj$setInitialState(list(x[1], 1e-1*diag(1)))
 ```
 
 ```{r, include=FALSE}
-folder_path <- ctsmTMB:::create_temp_folder()
-obj$setCppfilesDirectory(folder_path)
+temporary_directory <- normalizePath(file.path(tempdir(),"ctsmTMB_cppfiles"))
+obj$setCppfilesDirectory(temporary_directory)
 ```
 
 # Predict
@@ -315,5 +315,5 @@ ggplot() +
 ```
 
 ```{r clean up, include=FALSE}
-unlink(folder_path, recursive=TRUE)
+unlink(temporary_directory, recursive=TRUE)
 ```
