--- a/vignettes/ctsmTMB.Rmd
+++ b/vignettes/ctsmTMB.Rmd
@@ -52,8 +52,8 @@ obj$setCppfilesDirectory("some_path_to_a_directory")
 
 ```{r, include=FALSE}
 # temporary_directory <- normalizePath(file.path(tempdir(),"ctsmTMB_cppfiles"))
-temporary_directory <- normalizePath(file.path(getwd(),"ctsmTMB_cppfiles"))
-obj$setCppfilesDirectory(temporary_directory)
+# temporary_directory <- normalizePath(file.path(getwd(),"ctsmTMB_cppfiles"))
+# obj$setCppfilesDirectory(temporary_directory)
 ```
 
 Now that the object is created let us first inspect it's printout:
