--- a/vignettes/ctsmTMB.Rmd
+++ b/vignettes/ctsmTMB.Rmd
@@ -41,7 +41,7 @@ obj = ctsmTMB$new()
 We set the model name, which is used to generate the underlying C++ files
 
 ```{r}
-obj$setModelname("mymodel")
+obj$setModelname("getting_started_model")
 ```
 
 By default the files are saved in a directory called *ctsmTMB_cppfiles* in the current working directory. The files can be stored in another location by specifying another directory as below:
@@ -51,9 +51,7 @@ obj$setCppfilesDirectory("some_path_to_a_directory")
 ```
 
 ```{r, include=FALSE}
-temporary_directory <- normalizePath(file.path(getwd()))
-# temporary_directory <- normalizePath(file.path(tempdir(),"ctsmTMBcppfiles"))
-# temporary_directory <- normalizePath(file.path(getwd(),"ctsmTMB_cppfiles"))
+temporary_directory <- file.path(tempdir(),"ctsmTMB_cppfiles")
 obj$setCppfilesDirectory(temporary_directory)
 ```
 
