--- a/vignettes/ctsmTMB.Rmd
+++ b/vignettes/ctsmTMB.Rmd
@@ -51,7 +51,8 @@ obj$setCppfilesDirectory("some_path_to_a_directory")
 ```
 
 ```{r, include=FALSE}
-temporary_directory <- file.path(tempdir(),"ctsmTMB_cppfiles")
+tdir <- stringr::str_replace_all(tempdir(),"\\\\","/")
+temporary_directory <- file.path(tdir,"ctsmTMB_cppfiles")
 obj$setCppfilesDirectory(temporary_directory)
 ```
 
