--- a/vignettes/ctsmTMB.Rmd
+++ b/vignettes/ctsmTMB.Rmd
@@ -51,8 +51,7 @@ obj$setCppfilesDirectory("some_path_to_a_directory")
 ```
 
 ```{r, include=FALSE}
-tdir <- stringr::str_replace_all(tempdir(),"\\\\","/")
-temporary_directory <- file.path(tdir,"ctsmTMB_cppfiles")
+temporary_directory <- file.path(tempdir(),"ctsmTMB_cppfiles")
 obj$setCppfilesDirectory(temporary_directory)
 ```
 
